@@ -1,3 +1,8 @@
+2006-02-10  Brian Gough  <bjg@network-theory.co.uk>
+
+	* cholesky.c (quiet_sqrt): added a quiet_sqrt to allow checking
+	for positive definiteness without a runtime error
+
 2005-08-22  Brian Gough  <bjg@network-theory.co.uk>
 
 	* svd.c (gsl_linalg_SV_decomp_jacobi): reorganised convergence
